--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -132,137 +132,139 @@ jobs:
 
 
   validate-and-execute:
-      needs: detect-changes
-      runs-on: ubuntu-latest
-      if: ${{ needs.detect-changes.outputs.notebooks_json != '[]' }}
-      strategy:
-        matrix:
-          notebook: ${{ fromJson(needs.detect-changes.outputs.notebooks_json) }}
-        fail-fast: false
-        max-parallel: 4
-    
-      steps:
-        - uses: actions/checkout@v4
-          with:
-            fetch-depth: 0
-    
-        - name: Set up Python
-          uses: actions/setup-python@v5
-          with:
-            python-version: ${{ inputs.python-version }}
-    
-        - name: Set up Conda Environment
-          if: inputs.use-conda == true
-          shell: bash -l {0}
-          run: |
-            echo "Setting up Conda environment..."
-            conda --version
-            ENV_NAME="ci_env"
-            conda create -n $ENV_NAME python=${{ inputs.python-version }} -y
-    
-            if [[ -n "${{ inputs.conda-environment-file }}" ]]; then
-              conda env update -n $ENV_NAME -f "${{ inputs.conda-environment-file }}"
-            elif [[ -n "${{ inputs.conda-packages }}" ]]; then
-              conda install -n $ENV_NAME -c conda-forge $(echo "${{ inputs.conda-packages }}" | tr ',' ' ') -y
-            else
-              echo "No extra conda packages specified."
-            fi
-    
-        - name: Install Base Dependencies
-          run: |
-            pip install jupyter nbval nbconvert bandit
-    
-        - name: Install Local Requirements
-          shell: bash -l {0}
-          run: |
-            set -e
-            NOTEBOOK="${{ matrix.notebook }}"
-            REQFILE="$(dirname "$NOTEBOOK")/requirements.txt"
-        
-            if [ "${{ inputs.use-conda }}" == "true" ]; then
-              echo "🔧 Activating Conda environment before installing pip-only requirements..."
-              source /usr/share/miniconda/etc/profile.d/conda.sh
-              conda activate ci_env
-            else
-              echo "🐍 Using system Python for installation."
-            fi
-        
-            echo "🔍 Checking for optional $REQFILE..."
-        
-            if [ -f "$REQFILE" ]; then
-              echo "📦 Installing local pip-only requirements from $REQFILE"
-              pip install -r "$REQFILE"
-            else
-              echo "⚠️ No local requirements.txt found — continuing without error"
-            fi
-
-    
-        - name: Validate Notebook
-          shell: bash -l {0}
-          run: |
-            set -e
-            NOTEBOOK="${{ matrix.notebook }}"
-    
-            if [ "${{ inputs.use-conda }}" == "true" ]; then
-              echo "🔧 Activating Conda environment for validation..."
-              source /usr/share/miniconda/etc/profile.d/conda.sh
-              conda activate ci_env
-            else
-              echo "🐍 Using system Python for validation."
-            fi
-    
-            echo "✅ Clearing outputs and validating notebook: $NOTEBOOK"
-            jupyter nbconvert --clear-output --inplace "$NOTEBOOK"
-            pytest --nbval --nbval-cell-timeout=4000 "$NOTEBOOK"
-    
-        - name: Execute Notebook
-          shell: bash -l {0}
-          run: |
-            set -e
-            NOTEBOOK="${{ matrix.notebook }}"
-    
-            if [ "${{ inputs.use-conda }}" == "true" ]; then
-              echo "🔧 Activating Conda environment for execution..."
-              source /usr/share/miniconda/etc/profile.d/conda.sh
-              conda activate ci_env
-            else
-              echo "🐍 Using system Python for execution."
-            fi
-    
-            echo "🚀 Executing notebook: $NOTEBOOK"
-            if ! jupyter nbconvert --to notebook --execute --inplace "$NOTEBOOK"; then
-              echo "⚠️ Notebook execution failed — inserting failure marker."
-              python .github/scripts/insert_failure_message.py "$NOTEBOOK"
-            fi
-    
-        - name: Security Scan Notebook
-          if: inputs.security-scan == true
-          run: |
-            set -e
-            NOTEBOOK="${{ matrix.notebook }}"
-            PYTHON_SCRIPT="${NOTEBOOK%.ipynb}.py"
-    
-            echo "🔍 Converting $NOTEBOOK to script for Bandit scan..."
-            jupyter nbconvert --to script "$NOTEBOOK"
-            bandit "$PYTHON_SCRIPT"
-    
-        - name: Upload Notebook if Failure
-          if: failure()
-          run: |
-            set -e
-            NOTEBOOK="${{ matrix.notebook }}"
-            SAFE_NOTEBOOK_NAME=$(echo "$NOTEBOOK" | sed 's#/#__#g')
-            echo "Uploading failed notebook: $NOTEBOOK (artifact name: failed-$SAFE_NOTEBOOK_NAME)"
-        
-            echo "::set-output name=safe-name::failed-$SAFE_NOTEBOOK_NAME"
-            echo "::set-output name=path::$NOTEBOOK"
-            
-        - name: Upload Failed Notebook Artifact
-          if: failure()
-          uses: actions/upload-artifact@v4
-          with:
-            name: ${{ steps.upload-failed.outputs.safe-name }}
-            path: ${{ steps.upload-failed.outputs.path }}
+    needs: detect-changes
+    runs-on: ubuntu-latest
+    if: ${{ needs.detect-changes.outputs.notebooks_json != '[]' }}
+    strategy:
+      matrix:
+        notebook: ${{ fromJson(needs.detect-changes.outputs.notebooks_json) }}
+      fail-fast: false
+      max-parallel: 4
+  
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+  
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ inputs.python-version }}
+  
+      - name: Set up Conda Environment
+        if: inputs.use-conda == true
+        shell: bash -l {0}
+        run: |
+          echo "🔧 Creating Conda environment..."
+          conda --version
+          ENV_NAME="ci_env"
+          conda create -n $ENV_NAME python=${{ inputs.python-version }} -y
+  
+          if [[ -n "${{ inputs.conda-environment-file }}" ]]; then
+            echo "📦 Installing from Conda environment file: ${{ inputs.conda-environment-file }}"
+            conda env update -n $ENV_NAME -f "${{ inputs.conda-environment-file }}"
+          elif [[ -n "${{ inputs.conda-packages }}" ]]; then
+            echo "📦 Installing Conda packages: ${{ inputs.conda-packages }}"
+            conda install -n $ENV_NAME -c conda-forge $(echo "${{ inputs.conda-packages }}" | tr ',' ' ') -y
+          else
+            echo "📭 No extra Conda packages specified"
+          fi
+  
+      - name: Install Base CI Dependencies
+        run: |
+          pip install jupyter nbval nbconvert bandit
+  
+      - name: Install Local Requirements (optional pip-only)
+        shell: bash -l {0}
+        run: |
+          set -e
+          NOTEBOOK="${{ matrix.notebook }}"
+          REQFILE="$(dirname "$NOTEBOOK")/requirements.txt"
+  
+          if [ "${{ inputs.use-conda }}" == "true" ]; then
+            echo "🔁 Activating Conda for optional pip requirements..."
+            source /usr/share/miniconda/etc/profile.d/conda.sh
+            conda activate ci_env
+          else
+            echo "🐍 Using system Python"
+          fi
+  
+          echo "🔍 Checking for $REQFILE..."
+          if [ -f "$REQFILE" ]; then
+            echo "📦 Installing additional pip requirements from $REQFILE"
+            pip install -r "$REQFILE"
+          else
+            echo "ℹ️ No local requirements.txt found — continuing"
+          fi
+  
+      - name: Validate Notebook
+        shell: bash -l {0}
+        run: |
+          set -e
+          NOTEBOOK="${{ matrix.notebook }}"
+  
+          if [ "${{ inputs.use-conda }}" == "true" ]; then
+            echo "🔁 Reactivating Conda for validation..."
+            source /usr/share/miniconda/etc/profile.d/conda.sh
+            conda activate ci_env
+          else
+            echo "🐍 Using system Python"
+          fi
+  
+          echo "✅ Clearing outputs and validating: $NOTEBOOK"
+          jupyter nbconvert --clear-output --inplace "$NOTEBOOK"
+          pytest --nbval --nbval-cell-timeout=4000 "$NOTEBOOK"
+  
+      - name: Execute Notebook
+        shell: bash -l {0}
+        run: |
+          set -e
+          NOTEBOOK="${{ matrix.notebook }}"
+  
+          if [ "${{ inputs.use-conda }}" == "true" ]; then
+            echo "🔁 Reactivating Conda for execution..."
+            source /usr/share/miniconda/etc/profile.d/conda.sh
+            conda activate ci_env
+          else
+            echo "🐍 Using system Python"
+          fi
+  
+          echo "🚀 Executing notebook: $NOTEBOOK"
+          if ! jupyter nbconvert --to notebook --execute --inplace "$NOTEBOOK"; then
+            echo "⚠️ Execution failed — inserting failure marker"
+            python .github/scripts/insert_failure_message.py "$NOTEBOOK"
+          fi
+  
+      - name: Security Scan Notebook
+        if: inputs.security-scan == true
+        run: |
+          NOTEBOOK="${{ matrix.notebook }}"
+          PYFILE="${NOTEBOOK%.ipynb}.py"
+  
+          echo "🔐 Converting to script for Bandit scan: $NOTEBOOK"
+          jupyter nbconvert --to script "$NOTEBOOK"
+          bandit "$PYFILE"
+  
+      - name: Upload Notebook if Failure
+        if: failure()
+        shell: bash
+        run: |
+          NOTEBOOK="${{ matrix.notebook }}"
+          SAFE_NAME=$(echo "$NOTEBOOK" | sed 's#/#__#g')
+          echo "Uploading failed notebook as: failed-${SAFE_NAME}"
+  
+          mkdir -p upload_failed
+          cp "$NOTEBOOK" "upload_failed/${SAFE_NAME}"
+  
+          tar -czf "failed-${SAFE_NAME}.tar.gz" -C upload_failed .
+  
+        # Upload artifact
+      - name: Upload Failed Notebook Artifact
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: failed-${{ matrix.notebook }}
+          path: ${{ matrix.notebook }}
 
 
     
