--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -202,7 +202,8 @@ jobs:
         run: |
           set -e
           NOTEBOOK="${{ matrix.notebook }}"
-  
+          REQFILE="$(dirname "$NOTEBOOK")/requirements.txt"
+
           if [ "${{ inputs.use-conda }}" == "true" ]; then
             echo "🔁 Reactivating Conda for validation..."
             source /usr/share/miniconda/etc/profile.d/conda.sh
@@ -210,7 +211,8 @@ jobs:
           else
             echo "🐍 Using system Python"
           fi
-  
+
+          pip install -r "$REQFILE"
           echo "✅ Clearing outputs and validating: $NOTEBOOK"
           jupyter nbconvert --clear-output --inplace "$NOTEBOOK"
           pytest --nbval --nbval-cell-timeout=4000 "$NOTEBOOK"
@@ -220,7 +222,8 @@ jobs:
         run: |
           set -e
           NOTEBOOK="${{ matrix.notebook }}"
-  
+          REQFILE="$(dirname "$NOTEBOOK")/requirements.txt"
+
           if [ "${{ inputs.use-conda }}" == "true" ]; then
             echo "🔁 Reactivating Conda for execution..."
             source /usr/share/miniconda/etc/profile.d/conda.sh
@@ -229,6 +232,7 @@ jobs:
             echo "🐍 Using system Python"
           fi
   
+          pip install -r "$REQFILE"
           echo "🚀 Executing notebook: $NOTEBOOK"
           if ! jupyter nbconvert --to notebook --execute --inplace "$NOTEBOOK"; then
             echo "⚠️ Execution failed — inserting failure marker"
